--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Portfolio|Tohur M.A</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
 
+<!-- AOS -->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -57,7 +60,7 @@
     <!-- akhir jumbotron -->
 
     <!-- About -->
-    <section id="about">
+    <section id="about" data-aos="fade-up" data-aos-duration="2000">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -91,7 +94,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-up"  data-aos-delay="300" data-aos-duration="900">
               <img src="img/Projects/1.jpg" class="card-img-top" alt="Project">
               <div class="card-body">
                 <p class="card-text">Contoh foto hewan</p>
@@ -99,7 +102,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-delay="300" data-aos-duration="1300">
               <img src="img/Projects/2.jpg" class="card-img-top" alt="Project">
               <div class="card-body">
                 <p class="card-text">Contoh potret orang</p>
@@ -107,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-delay="300" data-aos-duration="1700">
               <img src="img/Projects/3.jpg" class="card-img-top" alt="Project">
               <div class="card-body">
                 <p class="card-text">Contoh potret tempat</p>
@@ -172,8 +175,12 @@
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-
-    <script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+   
+   <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbwsWp_80zPty9ALlPTtaEI4nQjAWQddx70EeqzhFRCr691TbrygyG5oo9gEfIWQk1VX/exec'
   const form = document.forms['portfolio-contact-form']
   const btnKirim = document.querySelector('.btn-kirim');
